hphp/test/zend/bad/ext/curl/tests/curl_close_basic.php
<?php
$ch = curl_init();
curl_close($ch);
var_dump($ch);
?>
===DONE===